# flat-cap

flat-cap-driver/: CMakeLists.txt  config.h  config.h.cmake  indi_flatcapdriver.cpp  indi_flatcapdriver.h  indi_flatcapdriver.xml  indi_flatcapdriver.xml.cmake
flat-cap-firmware/: arduino-cli.yml  flat-cap-firmware.ino
